--- a/snippets/onboarding-featured-collections.liquid
+++ b/snippets/onboarding-featured-collections.liquid
@@ -1,13 +1,13 @@
 <!-- snippets/onboarding-featured-collections.liquid -->
 
 <div class="helper-section">
-  <div class="container helper-note">
+  <div class="helper-note">
     <span class="helper-icon"></span>
     <h3>{{ 'onboarding.collections.modal_title' | t }}</h3>
     <p>{{ 'onboarding.collections.no_collections_html' | t }}</p>
     <p><a class="admin-btn-primary" href="/admin/custom_collections">{{ 'onboarding.collections.add_collection' | t }}</a></p>
   </div>
-  <div class="container helper-content">
+  <div class="helper-content">
     <div class="row">
       {% for i in (1..6) %}
         <div class="column l4 m6 s12">
