--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,9 +1,3 @@
 <!-- /templates/index.liquid -->
 
-{% include 'index-featured-products' %}
-
-{% include 'index-featured-collections' %}
-
-{% include 'index-featured-news' %}
-
-{% include 'popup-demo' %}
+{{ content_for_index }}
