Slideshow section example

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -7,10 +7,10 @@
 <div class="container">
   <header>
     <div class="row">
-      <div class="column l6 m12">
+      <div class="column l6 m12 s12">
         <h1>{{ collection.title }}</h1>
       </div>
-      <div class="column l6 m12 right m-left s-left">
+      <div class="column l6 m12 s12 right m-left s-left">
         <label for="SortBy">{{ 'collection.sort.title' | t }}</label>
         <div class="select-wrapper">
           <select name="SortBy" id="SortBy">
