Customised new password page
Now with sections :D

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -429,7 +429,8 @@ a.button {
 }
 .center {
   text-align: center;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .right {
   text-align: right;
