--- a/sections/password-header.liquid
+++ b/sections/password-header.liquid
@@ -1,20 +1,22 @@
 <!-- sections/password-header.liquid -->
 
-{% if section.settings.logo %}
-  <a href="/" itemprop="url" class="site-header__logo-image">
-    {% capture image_size %}{{ section.settings.logo_max_width }}x{% endcapture %}
-    <img src="{{ section.settings.logo | img_url: image_size }}"
-         srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
-         alt="{{ section.settings.logo.alt | default: shop.name }}"
-         itemprop="logo">
-  </a>
-{% else %}
-  <h1 class="site-header__logo-link" href="/" itemprop="url">
-    <span class="logo">{{ shop.name }}</span>
-  </h1>
-{% endif %}
-
-<h2 class="password__title">{{ section.settings.header }}</h2>
+<div class="container center">
+  <header class="theme-header" role="banner">
+    <h1 class="logo" itemscope itemtype="http://schema.org/Organization">
+    {% if section.settings.logo %}
+      <a href="/" itemprop="url">
+        <img src="{{ section.settings.logo | img_url: image_size }}"
+             srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
+             alt="{{ section.settings.logo.alt | default: shop.name }}"
+             itemprop="logo">
+      </a>
+    {% else %}
+      <a href="/" itemprop="url">{{ shop.name }}</a>
+    {% endif %}
+    </h1>
+    <hr>
+  </header>
+</div>
 
 {% schema %}
   {
@@ -30,12 +32,6 @@
         "id": "logo_max_width",
         "label": "Custom logo width (in pixels)",
         "default": "100"
-      },
-      {
-        "type": "text",
-        "id": "header",
-        "label": "Heading",
-        "default": "Coming Soon"
       }
     ]
   }
