--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,9 +12,8 @@
   https://experts.shopify.com/elkfox
   Copyright 2015 Shopify Inc. & Elkfox Co Pty Ltd
 ============================================================================ -->
-<!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if IE 9]> <html class="ie9 no-js" lang="{{ shop.locale }}"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{ shop.locale }}"> <!--<![endif]-->
 <head>
 
   <!-- META ================================================== -->
@@ -45,7 +44,6 @@
   {{ content_for_header }}
 
   <!-- CSS ================================================== -->
-  {% comment %}{{ 'timber.scss.css' | asset_url | stylesheet_tag }} <!-- TEMPORARY --> {% endcomment %}
   {{ 'app.scss.css' | asset_url | stylesheet_tag }}
 
   <!-- javascript ================================================== -->
