--- a/sections/password-content.liquid
+++ b/sections/password-content.liquid
@@ -3,41 +3,63 @@
 {% comment %}
   Password message which you can edit on http://www.shopify.com/admin/online_store/preferences
 {% endcomment %}
-{% unless shop.password_message == blank %}
-  <div class="password-message">
-    {{ shop.password_message }}
-  </div>
-{% endunless %}
 
-{% if section.settings.newsletter_enable %}
-  {% form 'customer' %}
-    {{ form.errors | default_errors }}
-    {% if form.posted_successfully? %}
-      <ul class="form--success">
-        <li>{{ 'general.password_page.signup_form_success' | t }}</li>
-      </ul>
-    {% else %}
-      <p class="password__form-heading h4">
-        {{ section.settings.newsletter_form_heading }}
-      </p>
-      <input type="hidden" name="contact[tags]" value="prospect, password page">
-      <label for="email" class="label--hidden">{{ 'general.password_page.signup_form_email_label' | t }}</label>
-      <div class="input-group password__input-group">
-        <input type="email" name="contact[email]" id="Email" class="input-group__field" placeholder="{{ section.settings.newsletter_placeholder }}">
-        <span class="input-group__btn">
-          <button type="submit" name="commit" class="btn">
-            <span>{{ section.settings.newsletter_button_text }}</span>
-          </button>
-        </span>
+<main id="MainContent" role="main">
+  <div class="container center">
+
+    <div class="password-heading">
+      <h2>{{ section.settings.header }}</h2>
+    </div>
+
+    {% unless shop.password_message == blank %}
+      <div class="password-message">
+        {{ shop.password_message }}
       </div>
+    {% endunless %}
+
+    {% if section.settings.newsletter_enable %}
+      {% form 'customer' %}
+        {{ form.errors | default_errors }}
+        {% if form.posted_successfully? %}
+          <p class="note form-success">
+            {{ 'password_page.signup_form_success' | t }}
+          </p>
+        {% else %}
+          <p class="h4">
+            {{ section.settings.newsletter_form_heading }}
+          </p>
+          <input type="hidden" name="contact[tags]" value="prospect, password page">
+          <label for="email" class="hidden">{{ 'password_page.signup_form_email_label' | t }}</label>
+          <input type="email" name="contact[email]" id="Email" class="input-group__field" placeholder="{{ section.settings.newsletter_placeholder }}">
+          <button type="submit" name="commit" class="btn">
+            {{ section.settings.newsletter_button_text }}
+          </button>
+        {% endif %}
+      {% endform %}
     {% endif %}
-  {% endform %}
-{% endif %}
+
+  </div>
+</main>
+
+{% stylesheet %}
+.password-heading {
+  margin-bottom: 50px;
+}
+form#contact_form {
+  margin-bottom: 50px;
+}
+{% endstylesheet %}
 
 {% schema %}
   {
     "name": "Content",
     "settings": [
+      {
+        "type": "text",
+        "id": "header",
+        "label": "Heading",
+        "default": "Coming Soon"
+      },
       {
         "type": "checkbox",
         "id": "newsletter_enable",
