--- a/sections/password-footer.liquid
+++ b/sections/password-footer.liquid
@@ -1,18 +1,42 @@
 <!-- sections/password-footer.liquid -->
 
-{% if section.settings.show_share_buttons %}
-  <div class="password-social-sharing">
-    <p class="password__form-heading h4">{{ section.settings.social_message }}</p>
-    {% include 'social-sharing' %}
-  </div>
-{% endif %}
+<footer class="container center">
 
-<div class="password-powered-by">
+  {% if section.settings.show_share_buttons %}
+    <p class="h4">{{ section.settings.social_message }}</p>
+    {% include 'social-links' %}
+  {% endif %}
+
   {% capture shopify %}
     <a class="classic-link shopify-link" href="//www.shopify.com" target="_blank" title="Create your own online store with Shopify">Shopify</a>
   {% endcapture %}
-  <small>{{ 'general.password_page.powered_by_shopify_html' | t: shopify: shopify }}</small>
-</div>
+  <hr>
+  <p>
+    <small>{{ 'password_page.powered_by_shopify_html' | t: shopify: shopify }}</small><br>
+    <small><a href="" data-popup="#PasswordPagePopup" class="popup-link">{{ 'password_page.password_link' | t }}</a></small>
+  </p>
+
+  <div class="popup" role="alert" id="PasswordPagePopup">
+    <div class="popup-inner">
+      <div class="popup-outside"></div>
+      <div class="popup-content">
+        <p class="h4">{{ 'password_page.login_form_heading' | t }}</p>
+        {% form 'storefront_password' %}
+          {{ form.errors | default_errors }}
+          <label for="password" class="hidden">{{ 'password_page.login_form_password_label' | t }}</label>
+          <input type="password" name="password" id="Password" placeholder="{{ 'password_page.login_form_password_placeholder' | t }}">
+          <button type="submit" name="commit">
+            {{ 'password_page.login_form_submit' | t }}
+          </button>
+        {% endform %}
+        <hr>
+        <small>{{ 'password_page.admin_link_html' | t }}</small>
+        <a href="#close" class="popup-close" aria-label="{{ 'common.close' | t }}">{{ 'common.close' | t }}</a>
+      </div>
+    </div>
+  </div>
+
+</footer>
 
 {% schema %}
   {
