Social sharing for password page fix

--- a/sections/password-footer.liquid
+++ b/sections/password-footer.liquid
@@ -4,7 +4,7 @@
 
   {% if section.settings.show_share_buttons %}
     <p class="h4">{{ section.settings.social_message }}</p>
-    {% include 'social-links' %}
+    {% include 'social-sharing' %}
   {% endif %}
 
   {% capture shopify %}
