--- a/snippets/social-sharing.liquid
+++ b/snippets/social-sharing.liquid
@@ -7,7 +7,7 @@
   {% capture shareTitle %}{{ product.title }}{% endcapture %}
 {% endif %}
 {% if settings.social_sharing_blog %}
-  {% if template contains 'article' or template contains 'blog' %}
+  {% if template contains 'article' or template contains 'blog' or template == 'password' %}
     {% assign sharing_on = true %}
     {% capture permalinkURL %}{{ shop.url }}{{ article.url }}{% endcapture %}
     {% capture shareTitle %}{{ article.title }}{% endcapture %}
