Gift card template

--- a/layout/gift_card.liquid
+++ b/layout/gift_card.liquid
@@ -23,11 +23,10 @@
         content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="theme-color" content="{{ settings.color_primary }}">
 
-  <title>
-    {{ shop.name }} &ndash; {{ 'password_page.opening_soon' | t }}
-  </title>
-
-  {% include 'social-meta-tags' %}
+  {%- assign formatted_initial_value = gift_card.initial_value | money_without_trailing_zeros: gift_card.currency -%}
+  {%- assign formatted_initial_value_stripped = formatted_initial_value | strip_html -%}
+  <title>{{ 'gift_cards.title_html' | t: value: formatted_initial_value_stripped, shop: shop.name }}</title>
+  <meta name="description" content="{{ 'gift_cards.subtext' | t }}">
   <link rel="canonical" href="{{ canonical_url }}">
   {% if settings.favicon_enable %}
     <link rel="shortcut icon"
@@ -35,22 +34,23 @@
           type="image/png" />
   {% endif %}
 
-  <!-- Shopify ================================================== -->
+  {{ 'gift-card.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'vendor/qrcode.js' | shopify_asset_url | script_tag }}
+
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'vendor/qrcode.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'vendor/qrcode.js' | shopify_asset_url }}"></script><![endif]-->
+
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'vendor.js' | asset_url }}"></script><![endif]-->
+
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'gift-card.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'gift-card.js' | asset_url }}"></script><![endif]-->
+
   {{ content_for_header }}
-
-  <!-- CSS ================================================== -->
-  {{ 'app.scss.css' | asset_url | stylesheet_tag }}
-
-  <!-- javascript ================================================== -->
-  {% include 'oldIE-js' %}
-  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js' | script_tag }}
-  {{ 'modernizr.min.js' | asset_url | script_tag }}
 
 </head>
 
-<body id="template-password">
+<body class="template-giftcard">
   {{ content_for_layout }}
-  {{ 'app.js' | asset_url | script_tag }}
 </body>
-
 </html>
