--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -28,6 +28,7 @@
         {{ article.content }}
       </div>
 
+      <h4>{{ 'social.share.title' | t }}</h4>
       {% include 'social-sharing' %}
 
       {% if article.tags.size > 0 %}
