--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -84,6 +84,7 @@
         {{ product.description }}
       </div>
 
+      <h4>{{ 'social.share.title' | t }}</h4>
       {% include 'social-sharing' %}
 
       {% if collection %}
