--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -17,8 +17,8 @@
   {% endif %}
 
   <!-- Title and description ================================================== -->
-  <title>{{ 'gift_cards.issued.title' | t: value: formatted_initial_value_stripped, shop: shop.name }}</title>
-  <meta name="description" content="{{ 'gift_cards.issued.subtext' | t }}">
+  <title>{{ 'gift_cards.title_html' | t: value: formatted_initial_value_stripped, shop: shop.name }}</title>
+  <meta name="description" content="{{ 'gift_cards.subtext' | t }}">
 
   <!-- Helpers ================================================== -->
   <link rel="canonical" href="{{ canonical_url }}">
@@ -34,88 +34,81 @@
 
 <body>
 
-  <div class="wrapper">
+  <div class="container">
 
-    <header class="giftcard-header" role="banner">
-      <div class="h1 header-logo" itemscope itemtype="http://schema.org/Organization">
-        {% if settings.logo_use_image %}
-          <a href="{{ shop.url }}" itemprop="url">
-            <img src="{{ 'logo.png' | asset_url }}" alt="{{ shop.name }}" itemprop="logo">
-          </a>
-        {% else %}
-          <a href="{{ shop.url }}" itemprop="url">{{ shop.name }}</a>
-        {% endif %}
+    <header class="theme-header center" role="banner">
+      <div class="h1 logo" itemscope itemtype="http://schema.org/Organization">
+      {% if settings.logo_use_image %}
+        <a href="/" itemprop="url">
+          <img src="{{ 'logo.png' | asset_url }}" alt="{{ shop.name }}" itemprop="logo">
+        </a>
+      {% else %}
+        <a href="/" itemprop="url">{{ shop.name }}</a>
+      {% endif %}
       </div>
-      <div class="shop-url">{{ shop.url }}</div>
     </header>
 
     <main class="giftcard" role="main">
-      <div class="giftcard__border{% if gift_card.expired or gift_card.enabled != true %} disabled{% endif %}">
-        <div class="giftcard__content">
+      <div class="{% if gift_card.expired or gift_card.enabled != true %} disabled{% endif %}">
 
-          <div class="giftcard__header">
-            <h2 class="h4 giftcard__title">{{ 'gift_cards.issued.subtext' | t }}</h2>
-            {% unless gift_card.enabled %}
-              <span class="giftcard__tag">{{ 'gift_cards.issued.disabled' | t }}</span>
-            {% endunless %}
-            {% assign gift_card_expiry_date = gift_card.expires_on | date: "%d/%m/%y" %}
-            {% if gift_card.expired and gift_card.enabled %}
-               <span class="giftcard__tag">{{ 'gift_cards.issued.expired' | t: expiry: gift_card_expiry_date }}</span>
-            {% endif %}
-            {% if gift_card.expired != true and gift_card.expires_on and gift_card.enabled %}
-              <span class="giftcard__tag giftcard__tag--active">{{ 'gift_cards.issued.active' | t: expiry: gift_card_expiry_date }}</span>
-            {% endif %}
-          </div>
+        <hr>
 
-          <div class="giftcard__wrap">
-            <img src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" alt="Gift card illustration">
+        <h2 class="h4">{{ 'gift_cards.subtext' | t }}</h2>
 
-            {% assign initial_value_size = formatted_initial_value | size %}
-            <div class="h1 giftcard__amount{% if initial_value_size > 6 %} giftcard__amount--medium{% endif %}">
-              {% if gift_card.balance != gift_card.initial_value %}
-                <span class="tooltip">
-                  <span class="tooltip__label">{{ gift_card.balance | money }} <small>left</small></span>
-                </span>
-              {% endif %}
-              <strong>{{ formatted_initial_value }}</strong>
-            </div>
+        {% unless gift_card.enabled %}
+          <span class="disabled">{{ 'gift_cards.disabled' | t }}</span>
+        {% endunless %}
 
-            {% assign code_size = gift_card.code | format_code | size %}
-            <div class="giftcard__code{% if code_size <= 25 %} giftcard__code--large{% elsif code_size > 25 and code_size <= 30 %} giftcard__code--medium{% else %} giftcard__code--small{% endif %}" onclick="selectText('GiftCardDigits');">
-              <div class="giftcard__code__inner">
-                <strong class="giftcard__code__text" id="GiftCardDigits">{{ gift_card.code | format_code }}</strong>
-              </div>
-            </div>
-          </div>
+        {% assign gift_card_expiry_date = gift_card.expires_on | date: "%d/%m/%y" %}
 
-          <p class="giftcard__instructions">
-            {{ 'gift_cards.issued.redeem' | t }}
-          </p>
+        {% if gift_card.expired and gift_card.enabled %}
+           <span class="expired">{{ 'gift_cards.expired' | t: expiry: gift_card_expiry_date }}</span>
+        {% endif %}
 
-          <div id="QrCode"></div>
-          <script>
-            new QRCode(document.getElementById('QrCode'), {
-              text: "{{ gift_card.qr_identifier }}",
-              width: 120,
-              height: 120
-            });
-          </script>
+        {% if gift_card.expired != true and gift_card.expires_on and gift_card.enabled %}
+          <span class="active">{{ 'gift_cards.active' | t: expiry: gift_card_expiry_date }}</span>
+        {% endif %}
 
-          <div class="giftcard__actions">
-            <a href="{{ shop.url }}" class="btn" target="_blank">{{ 'gift_cards.issued.shop_link' | t }}</a>
-            <a href="#" class="action-link" onclick="window.print();">
-              <i class="action-link__print"></i>{{ 'gift_cards.issued.print' | t }}
-            </a>
-          </div>
+        <img src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" alt="Gift card illustration">
 
+        {% assign balance_remaining = gift_card.balance | money %}
+        <div class="h1">
+          {% if gift_card.balance != gift_card.initial_value %}
+            {{ 'gift_cards.remaining_html' | t: value: balance_remaining }}
+          {% endif %}
+          <strong>{{ formatted_initial_value }}</strong>
         </div>
+
+        {% assign code_size = gift_card.code | format_code | size %}
+        <div
+          class="qrcode{% if code_size <= 25 %}-large{% elsif code_size > 25 and code_size <= 30 %}-medium{% else %}-small{% endif %}"
+          onclick="selectText('GiftCardDigits');">
+          <strong id="GiftCardDigits">{{ gift_card.code | format_code }}</strong>
+        </div>
+
+        <p>{{ 'gift_cards.redeem_html' | t: value: formatted_initial_value }}</p>
+
+        <div id="QrCode"></div>
+        <script>
+          new QRCode(document.getElementById('QrCode'), {
+            text: "{{ gift_card.qr_identifier }}",
+            width: 120,
+            height: 120
+          });
+        </script>
+
+        <hr>
+
+        <a href="{{ shop.url }}" class="button" target="_blank">{{ 'gift_cards.shop_link' | t }}</a>
+        <a href="#" class="button" onclick="window.print();">{{ 'gift_cards.print' | t }}</a>
+
       </div>
     </main>
 
     <footer class="giftcard__footer" role="contentinfo">
        {% if gift_card.pass_url %}
         <a class="add-to-apple-wallet" href="{{ gift_card.pass_url }}">
-          <img src="{{ 'gift-card/add-to-apple-wallet.svg' | shopify_asset_url }}" width="120" height="40" alt="{{ 'gift_cards.issued.add_to_apple_wallet' | t }}">
+          <img src="{{ 'gift-card/add-to-apple-wallet.svg' | shopify_asset_url }}" width="120" height="40" alt="{{ 'gift_cards.add_to_apple_wallet' | t }}">
         </a>
       {% endif %}
     </footer>
