--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,5 +1,9 @@
 <!-- /templates/404.liquid -->
 
-<h1>{{ 'general.404.title' | t }}</h1>
+<div class="container">
 
-<p>{{ 'general.404.subtext_html' | t }}</p>
+  <h1>{{ '404.title' | t }}</h1>
+
+  <p>{{ '404.subtext_html' | t }}</p>
+
+</div>
