Added Endless Scrolling JS and templates

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -56,7 +56,7 @@
 
 </head>
 
-<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
+<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if collection.template_suffix %} templet-{{ collection.template_suffix }}{% endif %}" >
 
   {% include 'theme-header' %}
   <main id="MainContent" role="main">
