Form error field fixes

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -329,6 +329,9 @@ textarea {
     clear: both;
     margin-bottom: $gutter/3;
   }
+  &.error {
+    border-color: $colorHighlight;
+  }
 }
 textarea {
   height: initial;
