--- a/sections/password-content.liquid
+++ b/sections/password-content.liquid
@@ -31,7 +31,7 @@
           <input type="hidden" name="contact[tags]" value="prospect, password page">
           <label for="email" class="hidden">{{ 'password_page.signup_form_email_label' | t }}</label>
           <input type="email" name="contact[email]" id="Email" class="input-group__field" placeholder="{{ section.settings.newsletter_placeholder }}">
-          <button type="submit" name="commit" class="btn">
+          <button type="submit" name="commit">
             {{ section.settings.newsletter_button_text }}
           </button>
         {% endif %}
