--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -13,18 +13,18 @@
       {{ form.errors | default_errors }}
 
       <label for="FirstName" class="clearfix">{{ 'account.first_name' | t }}</label>
-      <input type="text" name="customer[first_name]" id="FirstName" class="input-full" placeholder="{{ 'account.first_name' | t }}" {% if form.first_name %}value="{{ form.first_name }}"{% endif %} autocapitalize="words" autofocus>
+      <input type="text" name="customer[first_name]" id="FirstName" placeholder="{{ 'account.first_name' | t }}" {% if form.first_name %}value="{{ form.first_name }}"{% endif %} autocapitalize="words" autofocus>
 
       <label for="LastName" class="clearfix">{{ 'account.last_name' | t }}</label>
-      <input type="text" name="customer[last_name]" id="LastName" class="input-full" placeholder="{{ 'account.last_name' | t }}" {% if form.last_name %}value="{{ form.last_name }}"{% endif %} autocapitalize="words">
+      <input type="text" name="customer[last_name]" id="LastName" placeholder="{{ 'account.last_name' | t }}" {% if form.last_name %}value="{{ form.last_name }}"{% endif %} autocapitalize="words">
 
       <label for="Email" class="clearfix">{{ 'form.email' | t }}</label>
-      <input type="email" name="customer[email]" id="Email" class="input-full{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'form.email' | t }}" {% if form.email %} value="{{ form.email }}"{% endif %} autocorrect="off" autocapitalize="off">
+      <input type="email" name="customer[email]" id="Email" {% if form.errors contains 'email' %}class="error"{% endif %} placeholder="{{ 'form.email' | t }}" {% if form.email %} value="{{ form.email }}"{% endif %} autocorrect="off" autocapitalize="off">
 
       <label for="CreatePassword" class="clearfix">{{ 'account.password' | t }}</label>
-      <input type="password" name="customer[password]" id="CreatePassword" class="input-full{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'account.password' | t }}">
+      <input type="password" name="customer[password]" id="CreatePassword" {% if form.errors contains 'password' %}class="error"{% endif %} placeholder="{{ 'account.password' | t }}">
 
-      <input type="submit" value="{{ 'account.register' | t }}" class="btn btn--full">
+      <input type="submit" value="{{ 'account.register' | t }}">
 
       <p><a href="{{ shop.url }}">{{ 'form.cancel' | t }}</a></p>
 
