--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -12,10 +12,10 @@
       {{ form.errors | default_errors }}
 
       <label for="ResetPassword" class="clearfix">{{ 'account.password' | t }}</label>
-      <input type="password" value="" name="customer[password]" id="ResetPassword" class="{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'account.password' | t }}">
+      <input type="password" value="" name="customer[password]" id="ResetPassword" {% if form.errors contains 'password' %}class="error"{% endif %} placeholder="{{ 'account.password' | t }}">
 
       <label for="PasswordConfirmation" class="clearfix">{{ 'account.password_confirmation' | t }}</label>
-      <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="{% if form.errors contains 'password_confirmation' %} error{% endif %}" placeholder="{{ 'account.password_confirmation' | t }}">
+      <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" {% if form.errors contains 'password_confirmation' %}class="error"{% endif %} placeholder="{{ 'account.password_confirmation' | t }}">
 
       <p><input type="submit" value="{{ 'form.submit' | t }}"></p>
 
