--- a/snippets/blog-comments.liquid
+++ b/snippets/blog-comments.liquid
@@ -89,15 +89,15 @@
           {{ form.errors | default_errors }}
 
           <label for="CommentAuthor" class="clearfix">{{ 'blog.comments.name' | t }}</label>
-          <input type="text" name="comment[author]" id="CommentAuthor" class="input-full{% if form.errors contains 'author' %} error{% endif %}" placeholder="{{ 'blog.comments.name' | t }}" value="{{ form.author }}" autocapitalize="words">
+          <input type="text" name="comment[author]" id="CommentAuthor" {% if form.errors contains 'author' %}class="error"{% endif %} placeholder="{{ 'blog.comments.name' | t }}" value="{{ form.author }}" autocapitalize="words">
 
           <label for="CommentEmail" class="clearfix">{{ 'blog.comments.email' | t }}</label>
-          <input type="email" name="comment[email]" id="CommentEmail" class="input-full{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'blog.comments.email' | t }}" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
+          <input type="email" name="comment[email]" id="CommentEmail" {% if form.errors contains 'email' %}class="error"{% endif %} placeholder="{{ 'blog.comments.email' | t }}" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
 
           <label for="CommentBody" class="clearfix">{{ 'blog.comments.message' | t }}</label>
-          <textarea name="comment[body]" id="CommentBody" class="input-full{% if form.errors contains 'body' %} error{% endif %}" placeholder="{{ 'blog.comments.message' | t }}">{{ form.body }}</textarea>
+          <textarea name="comment[body]" id="CommentBody" {% if form.errors contains 'body' %}class="error"{% endif %} placeholder="{{ 'blog.comments.message' | t }}">{{ form.body }}</textarea>
 
-          <input type="submit" class="btn" value="{{ 'blog.comments.post' | t }}">
+          <input type="submit" value="{{ 'blog.comments.post' | t }}">
         {% endform %}
       </div>
 
