--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -27,17 +27,17 @@
 
           {% assign name_attr = 'contact.form.name' | t | handle %}
           <label for="ContactFormName" class="clearfix">{{ 'form.name' | t }}</label>
-          <input type="text" id="ContactFormName" class="input-full" name="contact[{{ name_attr }}]" placeholder="{{ 'form.name' | t }}" autocapitalize="words" value="{% if form[name_attr] %}{{ form[name_attr] }}{% elsif customer %}{{ customer.name }}{% endif %}">
+          <input type="text" id="ContactFormName" name="contact[{{ name_attr }}]" placeholder="{{ 'form.name' | t }}" autocapitalize="words" value="{% if form[name_attr] %}{{ form[name_attr] }}{% elsif customer %}{{ customer.name }}{% endif %}">
 
           <label for="ContactFormEmail" class="clearfix">{{ 'form.email' | t }}</label>
-          <input type="email" id="ContactFormEmail" class="input-full" name="contact[email]" placeholder="{{ 'form.email' | t }}" autocorrect="off" autocapitalize="off" value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}">
+          <input type="email" id="ContactFormEmail" name="contact[email]" placeholder="{{ 'form.email' | t }}" autocorrect="off" autocapitalize="off" value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}">
 
           {% assign name_attr = 'form.phone' | t | handle %}
           <label for="ContactFormPhone" class="clearfix">{{ 'form.phone' | t }}</label>
-          <input type="tel" id="ContactFormPhone" class="input-full" name="contact[{{ name_attr }}]" placeholder="{{ 'form.phone' | t }}" pattern="[0-9\-]*" value="{% if form[name_attr] %}{{ form[name_attr] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
+          <input type="tel" id="ContactFormPhone" name="contact[{{ name_attr }}]" placeholder="{{ 'form.phone' | t }}" pattern="[0-9\-]*" value="{% if form[name_attr] %}{{ form[name_attr] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
 
           <label for="ContactFormMessage" class="clearfix">{{ 'form.message' | t }}</label>
-          <textarea rows="10" id="ContactFormMessage" class="input-full" name="contact[body]" placeholder="{{ 'form.message' | t }}">{% if form.body %}{{ form.body }}{% endif %}</textarea>
+          <textarea rows="10" id="ContactFormMessage" name="contact[body]" placeholder="{{ 'form.message' | t }}">{% if form.body %}{{ form.body }}{% endif %}</textarea>
 
           <input type="submit" value="{{ 'form.send' | t }}">
 
