Edited helper comment

--- a/templates/collection.ajaxination.liquid
+++ b/templates/collection.ajaxination.liquid
@@ -1,4 +1,4 @@
-<!-- /templates/collection.endless-click.liquid -->
+<!-- /templates/collection.endless-ajaxination.liquid -->
 
 {% paginate collection.products by 2 %}
 
