--- a/templates/collection.ajaxination.liquid
+++ b/templates/collection.ajaxination.liquid
@@ -40,7 +40,7 @@
 </div>
 
 <div class="container">
-  <div class="row" id="Ajaxinate" data-page="{{ paginate.current_page }}">
+  <div class="row ajaxcontainer" id="Ajaxinate" data-page="{{ paginate.current_page }}">
     {% for product in collection.products %}
       {% include 'collection-product' %}
     {% else %}
@@ -56,10 +56,10 @@
         </div>
       {% endif %}
     {% endfor %}
-    {% assign count = paginate.pages %}
-    {% for part in (1..count) %}
-      <a href="{{ collection.url }}?page={{ forloop.index }}" data-number="{{ forloop.index }}" class="PaginationLink{% if paginate.current_page == part %} active{% endif %}">{{ forloop.index }}</a></li>
-    {% endfor %}
+
+    <div class="column l12 pagination center">
+      {% include 'pagination-numbers-linear' %}
+    </div>
   </div>
 </div>
 {% endpaginate %}
